<resources>
    <string name="app_name">TrackerForRunner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="speed">Скорость:</string>
    <string name="distance">Осталось пробежать:</string>
    <string name="time">Время:</string>
    <string name="start">Старт</string>
    <string name="stop">Стоп</string>
    <string name="set_distance">Задать дистанцию</string>
    <string name="warning">ВНИМАНИЕ!\n\nДля корректной работы приложения используйте его находясь на улице. Черезмерные физические нагрузки для неподготовленного бегуна вредны для здоровья! Советуем не ставить слишком большую дистанцию, если вы не уверены, что её пробежите, не подвергая стрессу свой организм! \n\nУдачной тренировки!</string>
</resources>